--- a/main.html
+++ b/main.html
@@ -13,4 +13,25 @@
 
 </body>
 
+</html><!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+	<div id="container">
+		This is the main container element
+	</div>
+
+
+	
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
 </html>
